@@ -8,7 +8,7 @@ class CapitalRemittancesMailer < ApplicationMailer
     @capital_remittance.documents.generated.each do |doc|
       attachments["#{doc.name}.pdf"] = doc.file.read
     end
-    send_mail(subject: "Capital Call: #{@capital_remittance.fund.name}") if @to.present?
+    send_mail(subject: "#{@capital_remittance.fund.name}: #{@capital_remittance.capital_call.name}") if @to.present?
 
     Chewy.strategy(:sidekiq) do
       @capital_remittance.notification_sent = true
@@ -19,7 +19,7 @@ class CapitalRemittancesMailer < ApplicationMailer
   def notify_capital_remittance
     @capital_remittance = CapitalRemittance.find(params[:capital_remittance_id])
 
-    send_mail(subject: "New Capital Call by #{@capital_remittance.fund.name}") if @to.present?
+    send_mail(subject: "#{@capital_remittance.fund.name}: #{@capital_remittance.capital_call.name}") if @to.present?
   end
 
   def reminder_capital_remittance
@@ -28,12 +28,12 @@ class CapitalRemittancesMailer < ApplicationMailer
     @capital_remittance.documents.generated.each do |doc|
       attachments["#{doc.name}.pdf"] = doc.file.read
     end
-    send_mail(subject: "Capital Call Reminder: #{@capital_remittance.fund.name}") if @to.present?
+    send_mail(subject: "Reminder: #{@capital_remittance.fund.name} #{@capital_remittance.capital_call.name}") if @to.present?
   end
 
   def payment_received
     @capital_remittance = CapitalRemittance.find(params[:capital_remittance_id])
 
-    send_mail(subject: "Payment Confirmation for Capital Call #{@capital_remittance.fund.name}") if @to.present?
+    send_mail(subject: "Payment Confirmation for #{@capital_remittance.fund.name}: #{@capital_remittance.capital_call.name}") if @to.present?
   end
 end
