@@ -38,6 +38,12 @@
             <%= form.select :rule_type, ["AllocateAccountEntry-Name", "AllocateAccountEntry-EntryType", "AllocatePortfolio", "AllocatePortfolioInvestment", "GenerateAccountEntry", "CumulateAccountEntry", "GenerateCustomField", "Percentage"], {}, class: "form-control", data: {action: "change->fund-formula#ruleTypeChanged"}   %>
           </div>
 
+
+          <div class="form-group">
+            <%= form.label :rule_for %>
+            <%= form.select :rule_for, ["Accounting", "Reporting"], {}, class: "form-control" %>
+          </div>
+
           <div class="form-group">
             <%= form.label :commitment_type, "For" %>
             <%= form.select :commitment_type, ["All", "Pool", "CoInvest"], {}, class: "form-control" %>
